<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sgo="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hello_world" />

                    <EditText
                        android:id="@+id/TxtNombre"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/BtnHola"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hello_world" />

                    <Button
                        android:id="@+id/BtnHola2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/configure" />

                    <Button
                        android:id="@+id/BtnReadXML"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/readXml" />

                    <Button
                        android:id="@+id/BtnMapa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mapa" />
                    
                    
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Contenido Tab 2" />

                    <es.android.component.linearlayout.ControlLogin
                        android:id="@+id/CtlLogin"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="#0000AA"
                        sgo:login_text="Entrar" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Codigo" />
                    
                    <EditText
                        android:id="@+id/TxtNombreDb"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />
 					
 					<TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Valor" />
                    
 					 <EditText
                        android:id="@+id/TxtValorDb"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />
 					 
                    <Button
                        android:id="@+id/BtnSave"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/save" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</LinearLayout>